// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Loader__Chase-codnj1-1 fESJsW"
  id={null}
>
  <div
    className="Loader__Dot-codnj1-2 dAnPSt"
  />
  <div
    className="Loader__Dot-codnj1-2 dAnPSt"
  />
  <div
    className="Loader__Dot-codnj1-2 dAnPSt"
  />
  <div
    className="Loader__Dot-codnj1-2 dAnPSt"
  />
</div>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 ceKbHJ"
  id={null}
  rows={null}
>
  <div
    className="Loader__Fill-codnj1-0 bCvLPp"
    id={null}
  />
  <div
    className="Loader__Chase-codnj1-1 fESJsW"
    id={null}
  >
    <div
      className="Loader__Dot-codnj1-2 dAnPSt"
    />
    <div
      className="Loader__Dot-codnj1-2 dAnPSt"
    />
    <div
      className="Loader__Dot-codnj1-2 dAnPSt"
    />
    <div
      className="Loader__Dot-codnj1-2 dAnPSt"
    />
  </div>
</section>
`;
